This commit will create the new resume that utilizes the CSS stylesheet along with the .png file that I used for the background.

--- a/index.html
+++ b/index.html
@@ -3,28 +3,35 @@
   <head>
     <meta charset="utf-8">
     <title>Steven Stiles Resume</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
+
+   <div class="header">
     <h1><strong>Steven Stiles</strong></h1>
     <h3>XXXX XXXXXX, XXXXX</h3>
     <h3>XX, CO XXXXX</h3>
     <h3>XXXXX.XXXXXX@gmail.com | XXX-XXX-XXXX</h3>
-    <p>_____________________________________________________________</p>
+    <hr>
+   </div>
 
+   <div class="profile">
     <h2><strong>Profile</strong></h2>
+  </div>
 
     <ul>
       <li>Experienced in accounting, scheduling, Java, SQL, and data analysis</li>
       <li>Able to work in a fast paced environment and collaborate with cross functional teams</li>
       <li>Hard working, dedicated, professional individual driven to reach organizational goals</li>
     </ul>
-
+    <div class="education">
     <h2><strong>Education</strong></h2>
+    </div>
 
     <h3><strong>Master of Computer Information Systems</strong></h3>
-    <p>Major: Computer Information Systems</p>
-    <p>Boston University, Boston, Massachusetts</p>
+    Major: Computer Information Systems<br>
+    Boston University, Boston, Massachusetts<br />
 
     <ul>
       <li>Course Highlights: database design and implementation with Oracle SQL, software
@@ -33,14 +40,22 @@
     </ul>
 
     <h3><strong>Bachalor of Science in Business Administration</strong></h3>
-      <p>Major: Business Management</p>
-      <p>Colorado State University</p>
-      <p>Highlights: Magna Cum Laude, Dean's List</p>
+      Major: Business Management<br>
+      Colorado State University<br>
+      Highlights: Magna Cum Laude, Dean's List<br />
 
+    <div class="experience">
     <h2><strong>Experience</strong></h2>
+    </div>
 
-    <h4>Rye Telephone Company, Colorado City, CO &emsp;&nbsp; September 2016 to September 2018</h4>
-    <h5>Staff Accountant/Data Analyst</h5>
+ <div>
+    <h4 class="company">Rye Telephone Company, Colorado City, CO</h4>
+ </div>
+
+ <div class="date">
+  <p>September 2016 to September 2018</p>
+ </div>
+    <p>Staff Accountant/Data Analyst</p>
 
     <ul>
       <li>Provide accounting services for a conglomerate of three companies</li>
@@ -49,8 +64,8 @@
       <li>Provide cost analysis and scheduling support for Rye Telephone Company</li>
     </ul>
 
-    <h4>Sunwest Educational Credit Union, Pueblo CO&emsp;August 2014 to September 2016</h4>
-    <h5>Operations and Teller Manager, North Branch</h5>
+    <h4>Sunwest Educational Credit Union, Pueblo CO</h4> <p>August 2014 to September 2016</p>
+    <p>Operations and Teller Manager, North Branch</p>
 
     <ul>
       <li>Managed day to day operations of the branch including supervising teller and assisting with loan department</li>
@@ -59,8 +74,8 @@
       <li>Provided conflict resolution and interpersonal development for tellers</li>
     </ul>
 
-  <h4>EVRAZ, Pueblo CO &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;     August 2013 to August 2014</h4>
-  <h5>Seamless Tube Development</h5>
+    <h4>EVRAZ, Pueblo CO</h4>     <p>August 2013 to August 2014</p>
+    <p>Seamless Tube Development</p>
 
     <ul>
       <li>Analyzed cost savings to increase inventory productivity and modernize margin on mill products</li>
@@ -69,8 +84,8 @@
       <li>Communicated the production process to customers and worked with them to develop delivery windows for the product</li>
     </ul>
 
-  <h4>US Bank, Pueblo CO &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;     December 2011 to August 2013</h4>
-  <h5>Personal Banker</h5>
+    <h4>US Bank, Pueblo CO</h4>    <p>December 2011 to August 2013</p>
+      <p>Personal Banker</p>
 
     <ul>
       <li>Maintained clients and established new accounts</li>
@@ -78,7 +93,9 @@
       <li>Met monthly and quarterly sales goals</li>
     </ul>
 
+  <div class="technical">
   <h2><strong>Technical Skills</strong></h2>
+  </div>
 
     <ul>
       <li>SQL</li>
@@ -88,7 +105,8 @@
       <li>Windows 10</li>
       <li>MACC Accounting</li>
     </ul>
+    </>
 
-
+  </div>
   </body>
 </html>
